test/files/type-resolver/errors/constant-input.otest
name = "Constant in number input"
line = 2
character = 17
error = 'Expected number for input "frequency", but received sequence order constant.'

---

sine(frequency: forward)

---

name = "String in number input"
line = 2
character = 17
error = 'Expected number for input "frequency", but received string.'

---

sine(frequency: "test")

---

name = "List in number input"
line = 2
character = 17
error = 'Expected number for input "frequency", but received list of number.'

---

sine(frequency: [ 1, 2, 3 ])

---

name = "Number in constant input"
line = 2
character = 32
error = 'Expected sequence order constant for input "order", but received number.'

---

sequence(values: [ 0 ], order: 0)

---

name = "String in constant input"
line = 2
character = 32
error = 'Expected sequence order constant for input "order", but received string.'

---

sequence(values: [ 0 ], order: "test")

---

name = "List in constant input"
line = 2
character = 32
error = 'Expected sequence order constant for input "order", but received list of sequence order constant.'

---

sequence(values: [ 0 ], order: [ forward, backward ])

---

name = "Number in string input"
line = 2
character = 14
error = 'Expected string for input "file", but received number.'

---

sample(file: 0)

---

name = "Constant in string input"
line = 2
character = 14
error = 'Expected string for input "file", but received sequence order constant.'

---

sample(file: forward)

---

name = "List in string input"
line = 2
character = 14
error = 'Expected string for input "file", but received list of string.'

---

sample(file: [ "test", "test1" ])

---

name = "Number in list input"
line = 2
character = 18
error = 'Expected list of number for input "values", but received number.'

---

sequence(values: 0)

---
name = "Constant in list input"
line = 2
character = 18
error = 'Expected list of number for input "values", but received sequence order constant.'

---

sequence(values: forward)

---

name = "String in list input"
line = 2
character = 18
error = 'Expected list of number for input "values", but received string.'

---

sequence(values: "test")
